fix(invoice): fix hoa don hien thi dichj vu khong dung